# cpp-basic-usage

./: .gitignore  CMakeLists.txt  README.md  async.cc  call_stack.cc  check_nan.cc  class_const_member.cc  compare_version.cc  const_mutable.cc  const_pointer.cc  cout_macro.cc  cpp_mem.cpp  crash.cc  custom_sort.cc  ends_with.cc  float_min.cc  for_erase.cc  good_bad_worker.cc  likely.c  log.h  macro_define.cc  multi_thread.cc  negtive_residu.cc  pairs_of_numbers.cc  pointer_vector.cc  program_exit.cc  push_read.cc  return-type.cc  return_reference.cc  set_contain.cc  side_process.cc  sizeof.cc  sort_bug.cc  sort_line.cc  span_basic.cc  static_variable.cc  str_replace.cc  timer.h  too_many_product_operation.cc  use_after_move.cc  (+6 more)
algo/: CMakeLists.txt  a_star_pathfinding.cc  b_plus_tree.cc  b_tree.cc  d_star_lite.cc  d_star_path_finding.cc  dijkstra.cc  equal_demo.cc  red_black_tree.cc  viterbi.cc
array/: CMakeLists.txt  array_init.cc  array_size.cc  bitmap.cc  use_array.cc
c++17/: CMakeLists.txt  set_difference.cc  tuple_compare.cc  use_any.cpp  use_optional.cc
class_demo/: generate_memory_hierarchy.sh  simple_class.cc
class_object/: CMakeLists.txt  base_class_method_call_base_class_method.cc  copy_assign.cc  inherit.cc  make_shared_from_instance.cc  move.cc  object.h  pointer_polymorphism.cc  singletone.cc  template.cc
constexpr/: CMakeLists.txt  char_array.cc  constexpr.cc
data_conversion/: CMakeLists.txt  vector_size.cc
database_demo/: CMakeLists.txt  database.cc
design_mode/: CMakeLists.txt  observer.cc  observer2.cc
digital_digest/: CMakeLists.txt  md5_demo.cc  validate_vin_code.cc
filesystem_demo/: CMakeLists.txt  copy_dir.cc  delete_while_read.cc  empty_dir.cc  file_error_code.cc  remove_demo.cc  watch_single_file.cc  write_with_temp_file.cc
filesystem_demo/file_write_sdk/: CMakeLists.txt  FileNotifier.cpp  FileNotifier.hpp  SafeFileWriter.cpp  SafeFileWriter.hpp  reader_demo.cc  writer_demo.cc
game/: 24point.cc  CMakeLists.txt
impl/: CMakeLists.txt  main.cc  my_class.cc  my_class.h
keyword/: CMakeLists.txt  mutable.cc
lambda/: CMakeLists.txt  capture.cc
linux_c/: CMakeLists.txt  exec.c  fork_wait.c  redirection.c  va.c
lock_demo/: CMakeLists.txt  lock_demo.cc
macro/: CMakeLists.txt  use_macro.cc
memory_error/: CMakeLists.txt  memory_error_operation.cc
memory_order/: CMakeLists.txt  counter.cc  simple_producer_consumer.cc
meta_function/: CMakeLists.txt  is_same.cc
mutex/: CMakeLists.txt  use_mutex.cc
nested_class/: CMakeLists.txt  nested_function.cc
number/: CMakeLists.txt  add.cc  islessgreater.cc  overrflow.cc
numeric/: CMakeLists.txt  custom_prefix_sum.cc  partial_sum.cc
pair_tuple/: CMakeLists.txt  pair.cc  pair_map.cc
pcl/: CMakeLists.txt  compare_point.cc
promise_future/: CMakeLists.txt  packaged_task.cc  promise.cc  shared_future.cc  use_future.cc
random/: CMakeLists.txt  generate_id.cc  old_rand.cc
random_demo/: generate_id.cc  normal.cc  uni-formal.cc
reference/: CMakeLists.txt  reference.cc
sfinae/: CMakeLists.txt  different_struct.cc
size_align/: CMakeLists.txt  check_size_align.cc
smart_pointer/: CMakeLists.txt  custom_deleter.cc  custom_smart_ptr.cc  custom_smart_ptr2.cc  deref.cc  index.cc  ptr_equal.cc  rcu_ptr.cc  replace.cc  reset.cc  smart_pointer_op.cc
static/: CMakeLists.txt  func_run_once.cc  main.cc  my_static_class.cc  my_static_class.h
test_proto/: CMakeLists.txt  data.proto  use_proto.cc
thread/: CMakeLists.txt  detatch.cc
time/: CMakeLists.txt  clock.cc  current_time.cc  time_hash.cc  time_interval.cc
type/: CMakeLists.txt  type_convert.cc
use_absl/: CMakeLists.txt  some_absl_string.cc  status_or.cc  strcat.cc  use_clean_up.cc  variant.cc
use_boost/: CMakeLists.txt  signal2.cc  use_circular_buffer.cc
use_boost/bimap/: CMakeLists.txt  bimap_0.cc
use_boost/coroutine/: CMakeLists.txt  README.md  co_hello_1.cc  co_hello_2.cc  co_hello_3.cc  co_hello_4.cc
use_boost/rtree_demo/: CMakeLists.txt  rtree_0.cc  rtree_1.cc  rtree_10.cc  rtree_2.cc  rtree_3.cc  rtree_4.cc  rtree_5.cc  rtree_6.cc  rtree_7.cc  rtree_8.cc  rtree_9.cc
use_eigen/: CMakeLists.txt  map_matrix.cc
use_queue/: CMakeLists.txt  clear_queue.cc
use_string/: CMakeLists.txt  capacity.cc  chinese.cc  compare.cc  create_from_buffer.cc  hasmap_string_view.cc  init_null.cc  null.cc  str_to_num.cc  string_pointer.cc  string_view_demo.cc
use_vector/: CMakeLists.txt  calc_index.cc  double_to_hex.cc  for_loop_clear_container.cc  get_empty.cc  move_vector.cc  out_of_index.cc  remove_by_set.cc  sort.cc  vec_intersection.cc  vec_pair.cc
