add_executable(dijkstra dijkstra.cc)
add_executable(red_black_tree red_black_tree.cc)
add_executable(b_plus_tree b_plus_tree.cc)
add_executable(b_tree b_tree.cc)
add_executable(viterbi viterbi.cc)
add_executable(equal_demo equal_demo.cc)
add_executable(a_star_pathfinding a_star_pathfinding.cc)
add_executable(d_star_path_finding d_star_path_finding.cc)
# add_executable(d_star_lite d_star_lite.cc)
