add_executable(index index.cc)
add_executable(ptr_equal ptr_equal.cc)
add_executable(deref deref.cc)
add_executable(smart_pointer_op smart_pointer_op.cc)
add_executable(rcu_ptr rcu_ptr.cc)
add_executable(replace replace.cc)
add_executable(reset reset.cc)
add_executable(custom_deleter custom_deleter.cc)
add_executable(custom_smart_ptr custom_smart_ptr.cc)
add_executable(custom_smart_ptr2 custom_smart_ptr2.cc)